--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -9,16 +9,17 @@
     <Grid>
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="569" VerticalAlignment="Top" Width="842" Background="#FFEFFBFB">
             <TabItem Height="0">
-                <Grid Background="#FFEFFBFB">
-                    <Label x:Name="passwordLabel" Content="Password:" Height="37" Width="137" Margin="246,263,447,256"/>
-                    <Label x:Name="usernameLabel" Content="Username:" Height="37" Width="137" Margin="246,221,447,298"/>
+                <Grid Background="#FF18A6A6" Margin="0,0,-13,-4">
+                    <Label x:Name="passwordLabel" Content="Password:" Height="37" Width="137" Margin="246,263,447,256" Background="#FF18A6A6"/>
+                    <Label x:Name="usernameLabel" Content="Username:" Height="37" Width="137" Margin="246,221,447,298" Background="#FF18A6A6"/>
                     <TextBox x:Name="usernameBox" HorizontalAlignment="Left" Height="25" Margin="388,221,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" TextChanged="usernameTextChanged"/>
                     <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="25" Margin="388,263,0,0" VerticalAlignment="Top" Width="163" GotFocus="passwordGotFocus"/>
                     <Button x:Name="logInButton" Content="Sign In" Height="37" IsEnabled="False" Width="86" Margin="349,316,395,203" Click="logInButton_Click" Background="#FFD4DBDE" FontWeight="Bold"/>
+                    <Label x:Name="logInWarningLabel" Content="" HorizontalAlignment="Left" Margin="220,403,0,0" VerticalAlignment="Top" Width="399" FontSize="14"/>
                 </Grid>
             </TabItem>
             <TabItem Height="0" Focusable="True">
-                <Grid Background="#FFEFFBFB">
+                <Grid Background="#FF18A6A6">
                     <TabControl x:Name="tabControl1" Margin="10,73,10,20" Focusable="True">
                         <TabItem Header="Home" Margin="-2,10,-21,-10" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,16,0,0" Focusable="True">
@@ -26,10 +27,10 @@
                                 <Label Content="Surname:" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
                                 <Label Content="Email:" HorizontalAlignment="Left" Margin="10,212,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
                                 <Label Content="Position in company:" HorizontalAlignment="Left" Margin="10,288,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
-                                <Label x:Name="homeLabel1" Content="" HorizontalAlignment="Left" Margin="170,64,0,0" VerticalAlignment="Top" Width="142" FontSize="14" HorizontalContentAlignment="Right"/>
-                                <Label x:Name="homeLabel2" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,137,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
-                                <Label x:Name="homeLabel3" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,212,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
-                                <Label x:Name="homeLabel4" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,290,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label x:Name="homeLabelName" Content="" HorizontalAlignment="Left" Margin="170,64,0,0" VerticalAlignment="Top" Width="142" FontSize="14" HorizontalContentAlignment="Right"/>
+                                <Label x:Name="homeLabelSurname" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,137,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label x:Name="homeLabelEmail" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,212,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label x:Name="homeLabelPosition" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,290,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
                             </Grid>
                         </TabItem>
                         <TabItem Header="Employees" Margin="21,10,-49,-10" Height="39" Focusable="True">
@@ -86,9 +87,8 @@
                         </TabItem>
                         <TabItem Header="Projects" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="70" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
-                                <Button Content="Project Overview" HorizontalAlignment="Left" Margin="67,32,0,0" VerticalAlignment="Top" Width="105" Height="40" FontWeight="Bold" Click="projectOverview_Click"/>
-                                <DataGrid x:Name="projectsDataGrid" HorizontalAlignment="Left" Margin="246,32,0,0" 
-                                          VerticalAlignment="Top" Height="359" Width="554" Background="#FFDDDDDD"
+                                <DataGrid x:Name="DataGridUserStories" HorizontalAlignment="Left" Margin="332,32,0,0" 
+                                          VerticalAlignment="Top" Height="359" Width="468" Background="#FFDDDDDD"
                                           IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
                                           AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
                                           AllowDrop="True"  CanUserSortColumns="False" HorizontalGridLinesBrush="#FF7E97BF"
@@ -104,8 +104,14 @@
                                     </DataGrid.RowStyle>
                                     <DataGrid.Columns>
                                         <!--> Koje atribute treba da ima projekat??<-->
+                                        <DataGridTextColumn Width="*" Header="Title" Binding="{Binding Title}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                        <DataGridTextColumn Width="*" Header="Description" Binding="{Binding Description}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                        <DataGridTextColumn Width="*" Header="AcceptanceCriteria" Binding="{Binding AcceptanceCriteria}" Foreground="#FF16253E" FontWeight="Bold"/>
                                     </DataGrid.Columns>
                                 </DataGrid>
+                                <TextBox x:Name="textBoxProjects" HorizontalAlignment="Left" Height="294" Margin="10,97,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="299"/>
+                                <Label Content="Select project:" HorizontalAlignment="Left" Margin="0,3,0,0" VerticalAlignment="Top" Width="141" FontSize="14"/>
+                                <ComboBox x:Name="comboBoxProjects" HorizontalAlignment="Left" Margin="10,32,0,0" VerticalAlignment="Top" Width="299" Height="43" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectionChanged="comboBoxProjects_SelectionChanged"/>
                             </Grid>
                         </TabItem>
                         <TabItem Header="Work" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="77" Height="39" Focusable="True">
@@ -198,7 +204,7 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <Label x:Name="label1" Content="Hiring Company Employee" FontWeight="Bold" FontSize="32" HorizontalAlignment="Left" Height="53" Margin="198,21,0,0" VerticalAlignment="Top" Width="444" Foreground="#FF1F3270" Background="#FFEFFBFB"/>
+        <Label x:Name="label1" Content="Hiring Company Employee" FontWeight="Bold" FontSize="32" HorizontalAlignment="Left" Height="53" Margin="198,21,0,0" VerticalAlignment="Top" Width="444" Foreground="#FF1F3270" Background="#FF18A6A6"/>
         <Label Content="© Miljana e333/ Zvezdana e335" HorizontalAlignment="Left" Margin="652,542,0,0" VerticalAlignment="Top" Width="180"/>
 
     </Grid>
