--- a/Moduo2/Client/MainWindow.xaml
+++ b/Moduo2/Client/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
+        xmlns:view="clr-namespace:Client.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="625" Width="870">
     <Grid>
@@ -14,8 +15,8 @@
                     <Label x:Name="emailLabel" Content="E-mail address:" Height="37" Width="137" Margin="251,221,446,303"/>
                     <Label x:Name="passwordLabel" Content="Password:" Height="37" Width="137" Margin="251,263,446,261"/>
                     <TextBox x:Name="emailBox" HorizontalAlignment="Left" Height="25" Margin="388,221,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" TextChanged="usernameBox_TextChanged"/>
-                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="25" Margin="388,263,0,0" VerticalAlignment="Top" Width="163" GotFocus="passwordBox_GotFocus"/>
-                    <Button x:Name="logInButton" IsEnabled="True" Content="Log In" Height="37" Width="86" Margin="349,316,395,203" Click="logInButton_Click"/>
+                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="25" Margin="388,263,0,0" VerticalAlignment="Top" Width="163" PasswordChanged="passwordBox_PasswordChanged" />
+                    <Button x:Name="logInButton" IsEnabled="False" Content="Log In" Height="37" Width="86" Margin="349,316,395,203" Click="logInButton_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Height="0" Focusable="True">
@@ -33,9 +34,9 @@
                             </Grid>
                         </TabItem>
                         <TabItem Header="Work" Margin="21,10,-49,-10" Height="39" Focusable="True">
-                            <!--Grid Background="#FFE5E5E5" Margin="0,17,0,0" Focusable="True"/-->
-                            <TabControl x:Name="tabControlCEO" Background="White" HorizontalAlignment="Left" Height="571" Margin="7,2,0,0" VerticalAlignment="Top" Width="840">
-                            </TabControl>
+                            <Grid Background="#FFE5E5E5" Margin="0,17,0,0" Focusable="True">
+                                <view:CEOWork x:Name="workCeo"/>
+                            </Grid>
                         </TabItem>
                         <TabItem Header="Employees" Margin="49,10,-72,-10" Height="39" Focusable="True"  VerticalAlignment="Top">
                             <Grid Background="#FFE5E5E5" Margin="0,17,0,0" Focusable="True">
@@ -51,18 +52,20 @@
                         </TabItem>
                         <TabItem Header="Teams" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="70" Height="39" Focusable="True">
                             <Grid Background="#FFE5E5E5" Margin="0,17,0,0" Focusable="True">
-                                <DataGrid x:Name="dataGridTeams" ItemsSource="{Binding Employees, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="307" Margin="69,54,0,0" VerticalAlignment="Top" Width="650">
+                                <DataGrid x:Name="dataGridTeams" ItemsSource="{Binding Teams, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="307" Margin="69,54,0,0" VerticalAlignment="Top" Width="650">
                                     <DataGrid.Columns>
                                         <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
-                                        <DataGridTextColumn Header="Surname" Binding="{Binding Surname}"/>
-                                        <DataGridTextColumn Header="Position" Binding="{Binding Type}"/>
-                                        <DataGridTextColumn Header="e-mail" Binding="{Binding Email}"/>
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </Grid>
                         </TabItem>
                         <TabItem Header="Companies" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="77" Height="39" Focusable="True">
                             <Grid Background="#FFE5E5E5" Margin="0,17,0,1" Focusable="True">
+                                <DataGrid x:Name="dataGridHiringCompanies" ItemsSource="{Binding HiringCompanies, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="307" Margin="69,54,0,0" VerticalAlignment="Top" Width="650">
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+                                    </DataGrid.Columns>
+                                </DataGrid>
                             </Grid>
                         </TabItem>
                         <TabItem Margin="0,10,-240,-10" HorizontalAlignment="Right" Width="58" Height="39" Focusable="True">
