--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -13,8 +13,8 @@
                     <Label x:Name="passwordLabel" Content="Password:" Height="37" Width="137" Margin="246,263,447,256" Background="#FF18A6A6"/>
                     <Label x:Name="usernameLabel" Content="Username:" Height="37" Width="137" Margin="246,221,447,298" Background="#FF18A6A6"/>
                     <TextBox x:Name="usernameBox" HorizontalAlignment="Left" Height="25" Margin="388,221,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" TextChanged="usernameTextChanged"/>
-                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="25" Margin="388,263,0,0" VerticalAlignment="Top" Width="163" GotFocus="passwordGotFocus"/>
-                    <Button x:Name="logInButton" Content="Sign In" Height="37" IsEnabled="True" Width="86" Margin="349,316,395,203" Click="logInButton_Click" Background="#FFD4DBDE" FontWeight="Bold"/>
+                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="25" Margin="388,263,0,0" VerticalAlignment="Top" Width="163" PasswordChanged="passwordBox_PasswordChanged"/>
+                    <Button x:Name="logInButton" Content="Sign In" Height="37" IsEnabled="False" Width="86" Margin="349,316,395,203" Click="logInButton_Click" Background="#FFD4DBDE" FontWeight="Bold"/>
                     <Label x:Name="logInWarningLabel" Content="" HorizontalAlignment="Left" Margin="220,403,0,0" VerticalAlignment="Top" Width="399" FontSize="14"/>
                 </Grid>
             </TabItem>
@@ -62,9 +62,8 @@
                         </TabItem>
                         <TabItem Header="Companies" Margin="49,10,-72,-10" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
-                                <Button Content="Show partner companies" HorizontalAlignment="Left" Margin="67,32,0,0" VerticalAlignment="Top" Width="147" Height="40" FontWeight="Bold" Click="showPartnerCompanies_Click"/>
-                                <DataGrid x:Name="companiesDataGrid" HorizontalAlignment="Left" Margin="246,32,0,0" 
-                                          VerticalAlignment="Top" Height="359" Width="554" Background="#FFDDDDDD"
+                                <DataGrid x:Name="companiesDataGrid" HorizontalAlignment="Left" Margin="10,32,0,0" 
+                                          VerticalAlignment="Top" Height="359" Width="790" Background="#FFDDDDDD"
                                           IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
                                           AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
                                           AllowDrop="True"  CanUserSortColumns="False" HorizontalGridLinesBrush="#FF7E97BF"
@@ -79,7 +78,7 @@
                                         </Style>
                                     </DataGrid.RowStyle>
                                     <DataGrid.Columns>
-                                        <!--> Koje atribute treba da ima kompanija??<-->
+                                        <DataGridTextColumn Width="*" Header="Name" Binding="{Binding Name}" Foreground="#FF16253E" FontWeight="Bold"/>
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </Grid>
@@ -113,8 +112,85 @@
                                 <ComboBox x:Name="comboBoxProjects" HorizontalAlignment="Left" Margin="10,32,0,0" VerticalAlignment="Top" Width="299" Height="43" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectionChanged="comboBoxProjects_SelectionChanged"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Work" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="77" Height="39" Focusable="True">
+                        <TabItem x:Name="workTabItem" Header="Work" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="77" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,1" Focusable="True">
+                                <TabControl x:Name="tabControlCEO" HorizontalAlignment="Left" Height="359" VerticalAlignment="Top" Width="790">
+                                    <TabItem x:Name="tabItemEmployees" Header="Employees" Height="39">
+                                        <Grid Background="#FFF7F7F7">
+                                            <DataGrid x:Name="dataGridCEO" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="175" Width="470" Background="#FFDDDDDD"
+                                          IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
+                                          AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
+                                          AllowDrop="True"  CanUserSortColumns="False" HorizontalGridLinesBrush="#FF7E97BF"
+                                          VerticalGridLinesBrush="#FF7E97BF" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                                                <DataGrid.RowStyle>
+                                                    <Style TargetType="{x:Type DataGridRow}">
+                                                        <Style.Triggers>
+                                                            <Trigger Property="IsMouseOver" Value="True">
+                                                                <Setter Property="Background" Value="#ffffe6"/>
+                                                            </Trigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </DataGrid.RowStyle>
+                                                <DataGrid.Columns>
+                                                    <DataGridTextColumn Width="*" Header="Name" Binding="{Binding Name}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                    <DataGridTextColumn Width="*" Header="Surname" Binding="{Binding Surname}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                    <DataGridTextColumn Width="*" Header="Email" Binding="{Binding Email}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                    <DataGridTextColumn Width="*" Header="Position" Binding="{Binding Type}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                </DataGrid.Columns>
+                                            </DataGrid>
+                                            <Grid HorizontalAlignment="Left" Height="291" Margin="494,10,0,0" VerticalAlignment="Top" Width="281" Background="White" RenderTransformOrigin="0.505,0.519">
+                                                <Label x:Name="labelNameCEO" Content="Name:" HorizontalAlignment="Left" Height="26" Margin="5,57,0,0" VerticalAlignment="Top" Width="79"/>
+                                                <Label x:Name="labelSurameCEO" Content="Surname:" HorizontalAlignment="Left" Height="26" Margin="5,85,0,0" VerticalAlignment="Top" Width="79"/>
+                                                <Label x:Name="labelEmailCEO" Content="E-mail:" HorizontalAlignment="Left" Height="26" Margin="5,109,0,0" VerticalAlignment="Top" Width="79"/>
+                                                <Label x:Name="labelTypeCEO" Content="Position:" HorizontalAlignment="Left" Height="26" Margin="5,205,0,0" VerticalAlignment="Top" Width="79"/>
+                                                <Label x:Name="labelTitleCEO" Content="Add New Employee" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="67,10,0,0" VerticalAlignment="Top" Width="157"/>
+                                                <TextBox x:Name="textBoxNameCEO" HorizontalAlignment="Left" Height="21" Margin="56,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="153"/>
+                                                <TextBox x:Name="textBoxSurnameCEO" HorizontalAlignment="Left" Height="21" Margin="56,114,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="153"/>
+                                                <TextBox x:Name="textBoxEmailCEO" HorizontalAlignment="Left" Height="21" Margin="75,88,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="134"/>
+                                                <ComboBox x:Name="comboBoxPositionCEO" HorizontalAlignment="Left" Height="24" Margin="75,207,0,0" VerticalAlignment="Top" Width="134"/>
+                                                <Button x:Name="buttonAddEmployeeCEO" Content="Add" HorizontalAlignment="Left" Height="31" Margin="210,250,0,0" VerticalAlignment="Top" Width="61" Click="AddEmployeeButton_Click"/>
+                                                <Label x:Name="labelPasswordCEO" Content="Password:" HorizontalAlignment="Left" Margin="5,166,0,0" VerticalAlignment="Top" Width="79" Height="26"/>
+                                                <PasswordBox x:Name="passwordBoxCEO" HorizontalAlignment="Left" Margin="75,171,0,0" VerticalAlignment="Top" Height="21" Width="134"/>
+                                                <Label Content="Username:" HorizontalAlignment="Left" Margin="5,135,0,0" VerticalAlignment="Top" Width="65"/>
+                                                <TextBox x:Name="usernameTextBoxCEO" HorizontalAlignment="Left" Height="21" Margin="75,140,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="134"/>
+                                            </Grid>
+                                            <Grid HorizontalAlignment="Left" Height="101" Margin="10,200,0,0" VerticalAlignment="Top" Width="470" Background="White">
+                                                <Label x:Name="labelTitle1CEO" Content="Change Employee Position" FontSize="16" HorizontalAlignment="Left" Height="37" VerticalAlignment="Top" Width="221" Margin="6,0,0,0"/>
+                                                <TextBox x:Name="textBoxInfoCEO" IsReadOnly="True" HorizontalAlignment="Left" Height="21" Margin="232,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="228" RenderTransformOrigin="0.51,-0.091"/>
+                                                <ComboBox x:Name="comboBoxNewPositionCEO" HorizontalAlignment="Left" Height="24" Margin="155,60,0,0" VerticalAlignment="Top" Width="134"/>
+                                                <Label x:Name="labelInfoCEO" Content="New type:" HorizontalAlignment="Left" Height="26" Margin="33,59,0,0" VerticalAlignment="Top" Width="117"/>
+                                                <Button x:Name="buttonApplyTypeChangeCEO" Content="Apply " HorizontalAlignment="Left" Height="25" Margin="395,59,0,0" VerticalAlignment="Top" Width="65" Click="ApplyTypeChangeButton_Click"/>
+                                            </Grid>
+                                        </Grid>
+                                    </TabItem>
+                                    <TabItem x:Name="tabItemCompanies" Header="Partner Companies" Height="39">
+                                        <Grid Background="#FFF7F7F7">
+                                            <DataGrid x:Name="dataGrid_NotPartnerCompanies" HorizontalAlignment="Left" Margin="10,39,0,0" VerticalAlignment="Top" Height="230" Width="337" Background="#FFDDDDDD"
+                                          IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
+                                          AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
+                                          AllowDrop="True"  CanUserSortColumns="False" HorizontalGridLinesBrush="#FF7E97BF"
+                                          VerticalGridLinesBrush="#FF7E97BF" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                                                <DataGrid.RowStyle>
+                                                    <Style TargetType="{x:Type DataGridRow}">
+                                                        <Style.Triggers>
+                                                            <Trigger Property="IsMouseOver" Value="True">
+                                                                <Setter Property="Background" Value="#ffffe6"/>
+                                                            </Trigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </DataGrid.RowStyle>
+                                                <DataGrid.Columns>
+                                                    <DataGridTextColumn Width="*" Header="Name" Binding="{Binding Name}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                </DataGrid.Columns>
+                                            </DataGrid>
+                                            <Label Content="Select company and send partnership request:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="337"/>
+                                            <Button x:Name="PartnershipRequestCEO_button" Content="Send" HorizontalAlignment="Left" Margin="133,274,0,0" VerticalAlignment="Top" Width="75" Height="27"/>
+                                            <Grid HorizontalAlignment="Left" Height="291" Margin="369,10,0,0" VerticalAlignment="Top" Width="406" Background="White">
+                                                <Label Content="Ovde treba da smislimo deo za slanje projekata kompanijama itd." HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Width="370" Height="37"/>
+                                            </Grid>
+                                        </Grid>
+                                    </TabItem>
+                                </TabControl>
                             </Grid>
                         </TabItem>
                         <TabItem Margin="0,10,-240,-10" HorizontalAlignment="Right" Width="58" Height="39" Focusable="True">
