--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -195,34 +195,34 @@
                         </TabItem>
                         <TabItem Margin="0,10,-240,-10" HorizontalAlignment="Right" Width="58" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,-19" Focusable="True">
-                                <Grid Background="White" Margin="32,10,31,222">
-                                    <Label x:Name="editNameLabel" Content="Name: " HorizontalAlignment="Left" Height="28" Margin="10,52,0,0" VerticalAlignment="Top" Width="92"/>
-                                    <Label x:Name="editSurameLabel" Content="Surname: " HorizontalAlignment="Left" Height="28" Margin="10,85,0,0" VerticalAlignment="Top" Width="92"/>
-                                    <Label x:Name="editEmailLabel" Content="E-mail address: " HorizontalAlignment="Left" Height="28" Margin="10,118,0,0" VerticalAlignment="Top" Width="92"/>
-                                    <Label x:Name="editUsernameLabel" Content="Username: " HorizontalAlignment="Left" Height="28" Margin="10,151,0,0" VerticalAlignment="Top" Width="92"/>
-                                    <TextBox x:Name="textBoxEditName" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
-                                    <TextBox x:Name="textBoxEditSurname" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,85,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
-                                    <TextBox x:Name="textBoxEditEmail" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,118,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
-                                    <TextBox x:Name="textBoxEditUsername" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,151,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
-                                    <Button x:Name="buttonEditdata" Content="Edit data" HorizontalAlignment="Left" Margin="10,22,0,0" VerticalAlignment="Top" Width="135" Height="22" Click="editData_Click"/>
-                                </Grid>
-                                <Grid Background="White" Margin="32,199,31,156">
-                                    <Label x:Name="workingHours1" Content="Working hours:       From: " HorizontalAlignment="Left" Height="28" Margin="10,14,0,0" VerticalAlignment="Top" Width="153"/>
-                                    <Label x:Name="workingHours2" Content="To: " HorizontalAlignment="Left" Height="28" Margin="297,14,0,0" VerticalAlignment="Top" Width="153"/>
-                                    <Label x:Name="format" Content="Format: ..... " HorizontalAlignment="Left" Height="28" Margin="494,14,0,0" VerticalAlignment="Top" Width="153"/>
-                                    <TextBox x:Name="textBoxEditToTime" HorizontalAlignment="Left" Height="20" Margin="330,17,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129"/>
-                                    <TextBox x:Name="textBoxEditFromTime" HorizontalAlignment="Left" Height="20" Margin="163,17,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129"/>
+                                <Grid Background="White" Margin="32,10,31.4,160.4">
+                                    <Label x:Name="editNameLabel" Content="Name: " HorizontalAlignment="Left" Height="28" Margin="10,37,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editSurameLabel" Content="Surname: " HorizontalAlignment="Left" Height="28" Margin="10,65,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editEmailLabel" Content="E-mail address: " HorizontalAlignment="Left" Height="28" Margin="10,93,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <TextBox x:Name="textBoxEditName" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditSurname" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditEmail" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,93,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <Button x:Name="buttonEditdata" Content="Edit data" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="135" Height="22" Click="editData_Click"/>
+                                    <Label x:Name="workHoursLabel1" Content="Working hours:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="92" Height="28"/>
+                                    <Label x:Name="workHoursLabel2" Content="To: " HorizontalAlignment="Left" Margin="73,204,0,0" VerticalAlignment="Top" Height="28"/>
+                                    <TextBox x:Name="workBeginHour" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,171,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="40"/>
+                                    <TextBox x:Name="workBeginMinute" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="183,171,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="40"/>
+                                    <TextBox x:Name="workEndHour" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,204,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="40"/>
+                                    <TextBox x:Name="workEndMinute" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="183,204,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="40"/>
+                                    <Label x:Name="workHoursLabel3" Content="From: " HorizontalAlignment="Left" Margin="59,171,0,0" VerticalAlignment="Top" Height="28"/>
+                                    <Label Content="h" HorizontalAlignment="Left" Margin="160,171,0,0" VerticalAlignment="Top" Width="23" Height="28"/>
+                                    <Label Content="min" HorizontalAlignment="Left" Margin="228,171,0,0" VerticalAlignment="Top" Height="28" Width="34"/>
+                                    <Label Content="h" HorizontalAlignment="Left" Margin="160,204,0,0" VerticalAlignment="Top" Height="28" Width="28"/>
+                                    <Label Content="min" HorizontalAlignment="Left" Margin="228,204,0,0" VerticalAlignment="Top" Height="28" Width="34"/>
                                 </Grid>
                                 <Grid Background="White" Margin="32,265,31,87">
-                                    <Button x:Name="editPassword" Content="Change password..." HorizontalAlignment="Left" Height="22" Margin="14,10,0,0" VerticalAlignment="Top" Width="132" Click="editPassword_Click"/>
+                                    <Button x:Name="editPassword" Content="Change password..." HorizontalAlignment="Left" Height="22" Margin="10,10,0,0" VerticalAlignment="Top" Width="132" Click="editPassword_Click"/>
                                 </Grid>
                                 <Grid Background="White" Margin="32,297,393,4">
-                                    <Label x:Name="oldPasswordLabel" Content="Type in current password: " HorizontalAlignment="Left" Height="28" Margin="10,7,0,0" VerticalAlignment="Top" Width="157"/>
-                                    <Label x:Name="newPasswordLabel" Content="Type in new password: " HorizontalAlignment="Left" Height="28" Margin="10,34,0,0" VerticalAlignment="Top" Width="138"/>
-                                    <Label x:Name="confirmNewPasswordLabel" Content="Confirm new password: " HorizontalAlignment="Left" Height="28" Margin="10,61,0,0" VerticalAlignment="Top" Width="138"/>
-                                    <PasswordBox x:Name="passBoxOldPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,10,0,0" VerticalAlignment="Top" Width="159"/>
-                                    <PasswordBox x:Name="passBoxNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,37,0,0" VerticalAlignment="Top" Width="159"/>
-                                    <PasswordBox x:Name="passBoxConfirmNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,63,0,0" VerticalAlignment="Top" Width="159"/>
+                                    <Label x:Name="oldPasswordLabel" Content="Type in current password: " HorizontalAlignment="Left" Height="28" Margin="10,30,0,0" VerticalAlignment="Top" Width="157"/>
+                                    <Label x:Name="newPasswordLabel" Content="Type in new password: " HorizontalAlignment="Left" Height="28" Margin="10,63,0,0" VerticalAlignment="Top" Width="138"/>
+                                    <PasswordBox x:Name="passBoxOldPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,30,0,0" VerticalAlignment="Top" Width="159" PasswordChanged="passBoxOldPass_PasswordChanged"/>
+                                    <PasswordBox x:Name="passBoxNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,63,0,0" VerticalAlignment="Top" Width="159"/>
                                 </Grid>
                                 <Grid Background="White" Margin="433,348,31,4">
                                     <Button x:Name="saveChanges" Content="Save Changes" HorizontalAlignment="Left" Height="22" Margin="35,10,0,0" VerticalAlignment="Top" Width="100" Click="saveChanges_Click"/>
